WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282668
[macOS] Videos on Bing.com cannot successfully enter fullscreen
https://bugs.webkit.org/show_bug.cgi?id=282668
Summary
[macOS] Videos on Bing.com cannot successfully enter fullscreen
Jer Noble
Reported
2024-11-05 18:24:31 PST
[macOS] Videos on Bing.com cannot successfully enter fullscreen
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-11-05 18:24:32 PST
<
rdar://problem/126570526
>
Jer Noble
Comment 2
2024-11-05 18:35:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36243
EWS
Comment 3
2024-11-12 14:21:43 PST
Committed
286501@main
(fa5e0c0d9325): <
https://commits.webkit.org/286501@main
> Reviewed commits have been landed. Closing PR #36243 and removing active labels.
EWS
Comment 4
2024-12-16 14:07:22 PST
Committed
283286.597@safari-7620-branch
(44a8fccce2eb): <
https://commits.webkit.org/283286.597@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2362 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug