Cherry-pick fa5e0c0d9325. rdar://140010042

[macOS] Videos on Bing.com cannot successfully enter fullscreen
    https://bugs.webkit.org/show_bug.cgi?id=282668
    rdar://126570526

    Reviewed by Jean-Yves Avenard.

    On Bing.com, the page includes a list of iframe elements whose contents
    point to youtube.com embeds. As the user scrolls through the page, script
    running on Bing.com notes that the iframe elements have been scrolled out
    of the viewport, and tears down their contents. During the fullscreen
    transition, the iframe contents are in fullscreen mode and are visible in
    the top layer, but the div containing those contents has been scrolled
    offscreen. Additionally, the code checking for whether the iframes are
    visible runs when the window fires the "scroll" and "resize" events, which
    are fired during the fullscreen transition.

    Two changes are needed to fix this behavior:

    1. Calling WebPageProxy::setPageScale()
    has the side effect of scrolling the page back to the origin of (0, 0). This
    call is replaced with scalePageRelativeToScrollPosition(), which does not
    change the scroll position.

    2. Defer firing "scroll" and "resize" events until after "fullscreenchange"
    fires. This ensures that the page doesn't get an intermediate state during
    the fullscreen transition in which to check the layout of its contents.

    * Source/WebCore/dom/Document.cpp:
    (WebCore::Document::setNeedsDOMWindowResizeEvent):
    (WebCore::Document::setNeedsVisualViewportResize):
    (WebCore::Document::runResizeSteps):
    (WebCore::Document::flushDeferredResizeEvents):
    (WebCore::Document::runScrollSteps):
    (WebCore::Document::flushDeferredScrollEvents):
    (WebCore::Document::updateResizeObservations):
    * Source/WebCore/dom/Document.h:
    * Source/WebCore/dom/FullscreenManager.cpp:
    (WebCore::FullscreenManager::setAnimatingFullscreen):
    (WebCore::FullscreenManager::clear):
    (WebCore::FullscreenManager::addPendingScheduledResize): Deleted.
    * Source/WebCore/dom/FullscreenManager.h:
    * Source/WebCore/page/Page.cpp:
    (WebCore::Page::deferResizeEvents):
    (WebCore::Page::flushDeferredResizeEvents):
    (WebCore::Page::deferScrollEvents):
    (WebCore::Page::flushDeferredScrollEvents):
    * Source/WebCore/page/Page.h:
    (WebCore::Page::shouldDeferResizeEvents const):
    (WebCore::Page::shouldDeferScrollEvents const):
    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::deferResizeEvents):
    (WebKit::WebPageProxy::flushDeferredResizeEvents):
    (WebKit::WebPageProxy::deferScrollEvents):
    (WebKit::WebPageProxy::flushDeferredScrollEvents):
    * Source/WebKit/UIProcess/WebPageProxy.h:
    * Source/WebKit/UIProcess/mac/WKFullScreenWindowController.mm:
    (-[WKFullScreenWindowController enterFullScreen:]):
    (-[WKFullScreenWindowController finishedEnterFullScreenAnimation:]):
    (-[WKFullScreenWindowController exitFullScreen]):
    (-[WKFullScreenWindowController finishedExitFullScreenAnimationAndExitImmediately:]):
    * Source/WebKit/WebProcess/WebPage/WebPage.cpp:
    (WebKit::WebPage::deferResizeEvents):
    (WebKit::WebPage::flushDeferredResizeEvents):
    (WebKit::WebPage::deferScrollEvents):
    (WebKit::WebPage::flushDeferredScrollEvents):
    * Source/WebKit/WebProcess/WebPage/WebPage.h:
    * Source/WebKit/WebProcess/WebPage/WebPage.messages.in:
    * Tools/TestWebKitAPI/SourcesCocoa.txt:
    * Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/FullscreenScrollAndResize.mm: Added.
    (TestWebKitAPI::TEST(Fullscreen, ScrollAndResize)):
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/LoadAndDecodeImage.mm:
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:

    Canonical link: https://commits.webkit.org/286501@main

Fix build errors in WebPageProxy.cpp

Canonical link: https://commits.webkit.org/283286.597@safari-7620-branch